--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.8.5",
+    "react-datetime-picker": "^5.5.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-modal": "^3.16.1",
+    "react-redux": "^9.0.0",
+    "react-router-dom": "^6.20.0",
+    "redux": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
