--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-modal": "^3.16.1",
     "react-redux": "^9.0.0",
     "react-router-dom": "^6.20.0",
-    "redux": "^5.0.0"
+    "redux": "^5.0.0",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
