--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-big-calendar": "^1.8.5",
     "react-datetime-picker": "^5.5.3",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-modal": "^3.16.1",
     "react-redux": "^9.0.0",
     "react-router-dom": "^6.20.0",
